# openrc-manager-gui

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  main.cpp  openrc-manager-gui.desktop  openrc-manager-gui.pc
